# scrapy_training

./: pyproject.toml
bookscraper/: compose.yml
bookscraper/bookscraper/: env_settings.py  items.py  middlewares.py  pipelines.py  settings.py
bookscraper/bookscraper/database/: connection.py  env_settings.py  models.py
bookscraper/bookscraper/spiders/: bookspider.py
